--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,14 @@ highlighter: rouge
 logo: false
 paginate: 15
 baseurl: /
-domain_name: "http://yourblog-domain.com"
+domain_name: "http://fridlev.com"
 google_analytics: "UA-XXXXXXXX-X"
 plugins: [jekyll-paginate]
+future: true
 
 # Details for the RSS feed generator
 url: ""
-author: "Rasmus Jensen"
+author: "Rasmus Fridlev"
 
 # Disqus config
-disqus-shortname: ""
+disqus-shortname: "fridlev"
