--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ markdown: kramdown
 highlighter: rouge
 logo: false
 paginate: 15
-baseurl: /
-domain_name: "http://fridlev.com"
+baseurl: rasmus.fridlev.com
+domain_name: "https://rasmus.fridlev.com"
 google_analytics: "UA-XXXXXXXX-X"
 plugins: [jekyll-paginate]
 future: true
