--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ markdown: kramdown
 highlighter: rouge
 logo: false
 paginate: 15
-baseurl: rasmus.fridlev.com
+baseurl: /
 domain_name: "https://rasmus.fridlev.com"
 google_analytics: "UA-XXXXXXXX-X"
 plugins: [jekyll-paginate]
