--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: rasmus.fridlev.com
+name: Welcome!
 description: Welcome to my personal website. Read more
 meta_description: "My personal website hosted on GitHub"
 
