--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ markdown: kramdown
 highlighter: rouge
 logo: false
 paginate: 15
-baseurl: /
+baseurl: 
 domain_name: "https://rasmus.fridlev.com"
 google_analytics: "UA-129837768-2"
 plugins: [jekyll-paginate]
